--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Matheus - Portfólio</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Bem-vindo ao meu portfólio</h1>
-  <p>Sou profissional de TI com foco em segurança, redes e desenvolvimento.</p>
+
+  <div class="container mt-5">
+    <div class="card shadow">
+      <div class="card-body text-center">
+        <h1 class="card-title">Bem-vindo ao meu portfólio</h1>
+        <p class="card-text fs-5">Sou profissional de TI com foco em segurança, redes e desenvolvimento.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS (opcional para funcionalidades interativas) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
