--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/omatheussreis/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/matheus-reis-886755196/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://wa.me/+5565993321721" class="social-link">
               <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
           </li>
@@ -266,7 +266,7 @@
                 <h4 class="h4 service-item-title">PHP</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                 PHP é uma linguagem de programação usada no servidor para criar páginas web dinâmicas.
                 </p>
               </div>
 
@@ -282,7 +282,7 @@
                 <h4 class="h4 service-item-title">AWS</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  AWS é uma plataforma de serviços em nuvem da Amazon usada para hospedar sites, armazenar dados e rodar aplicações online.
                 </p>
               </div>
 
@@ -298,7 +298,7 @@
                 <h4 class="h4 service-item-title">BOOTSTRAP</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Bootstrap é um framework front-end que facilita a criação de sites responsivos com HTML, CSS e JavaScript prontos.
                 </p>
               </div>
 
@@ -314,7 +314,7 @@
                 <h4 class="h4 service-item-title">CSS</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  CSS é uma linguagem usada para estilizar e definir a aparência de elementos em páginas web.
                 </p>
               </div>   
 
@@ -333,7 +333,7 @@
                 <h4 class="h4 service-item-title">DOCKER</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Docker é uma plataforma que permite empacotar, distribuir e executar aplicações em contêineres isolados.
                 </p>
               </div>
 
@@ -349,7 +349,7 @@
                 <h4 class="h4 service-item-title">GIT</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Git é um sistema de controle de versão distribuído usado para rastrear mudanças em arquivos e coordenar trabalho entre desenvolvedores.
                 </p>
               </div>
 
@@ -365,7 +365,7 @@
                 <h4 class="h4 service-item-title">GITHUB</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                 GitHub é uma plataforma online para hospedagem e colaboração de projetos que utilizam o sistema de controle de versão Git.
                 </p>
               </div>
 
@@ -381,7 +381,7 @@
                 <h4 class="h4 service-item-title">HTML</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                HTML é a linguagem básica usada para criar a estrutura e o conteúdo de páginas na web.
                 </p>
               </div>   
 
@@ -399,7 +399,7 @@
                 <h4 class="h4 service-item-title">JAVASCRIPT</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  JavaScript é uma linguagem de programação que adiciona interatividade e dinamismo a páginas web.
                 </p>
               </div>
 
@@ -415,7 +415,7 @@
                 <h4 class="h4 service-item-title">LINUX</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                 Linux é um sistema operacional open source usado em servidores, computadores e dispositivos embarcados.
                 </p>
               </div>
 
@@ -431,7 +431,7 @@
                 <h4 class="h4 service-item-title">PYTHON</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                 Python é uma linguagem de programação fácil de aprender, usada para desenvolvimento web, automação, análise de dados e inteligência artificial.
                 </p>
               </div>
 
@@ -447,7 +447,7 @@
                 <h4 class="h4 service-item-title">SQL SERVER</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  SQL Server é um sistema de gerenciamento de banco de dados da Microsoft usado para armazenar e consultar dados de forma eficiente.
                 </p>
               </div>   
 
@@ -680,48 +680,188 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Education</h3>
+            <h3 class="h3">certificações</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Udemy</h4>
 
-              <span>2007 — 2008</span>
+              <span>2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Banco de Dados SQL do Zero ao Avançado + Projetos Reais.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Codecademy</h4>
 
-              <span>2006 — 2007</span>
+              <span>2025</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Build a Website with HTML, CSS, and GitHub Pages Skill Path.
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Udemy</h4>
 
-              <span>2002 — 2004</span>
+              <span>2025</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+               Desenvolvimento Responsivo com HTML5, CSS3 e Javascript.
+              </p>
+
+            </li>
+
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Udemy</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                Git e GitHub do básico ao avançado.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Udemy</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                ITIL 4 Foundation Practice Certification.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Codecademy</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+              Learn JavaScript Course.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Udemy</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+               MS-102 Bootcamp Microsoft 365 Administrator.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Udemy</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+                Microsoft MS-900 Certification M365 Fundamentals.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">IBM</h4>
+
+              <span>2025</span>
+
+              <p class="timeline-text">
+               Web Development Fundamentals.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">DIO</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+               AWS Well-Architected Framework.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">DIO</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+               Bancos de Dados SQL e NoSQL Para Devs Backend.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">DIO</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+               Introdução a Banco de Dados Relacionais (SQL).
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Udemy</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+               Fundamentos da Biblioteca de Infraestrutura V3.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">DIO</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+                Python AI Backend Developer.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">DIO</h4>
+
+              <span>2024</span>
+
+              <p class="timeline-text">
+               Santander 2024 - Preparatório Certificação AWS.
               </p>
 
             </li>
@@ -737,60 +877,52 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experience</h3>
+            <h3 class="h3">Experiências Profissionais</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Agps Tech</h4>
 
-              <span>2015 — Present</span>
+              <span>2023 — 2025</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Suporte Técnico de Campo – Sistemas Corporativos <br>
+              • Suporte e manutenção de sistemas ERP, folha de pagamento, contabilidade e logística; <br>
+              • Gerenciamento de conexões via VPN e sistemas TEF; <br>
+              • Criação de relatórios e consultas SQL diretamente no banco de dados; <br>
+              • Implantação e manutenção de sistemas voltados à automação comercial. <br>
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Hetosoft Sistemas</h4>
 
-              <span>2013 — 2015</span>
+              <span>2017 — 2018</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Suporte Técnico de Campo – Sistemas Corporativos <br>
+                • Suporte e manutenção de sistemas ERP, folha de pagamento, contabilidade e logística;  <br>  
+                • Gerenciamento de conexões via VPN e sistemas TEF; <br>
+                • Criação de relatórios e consultas SQL diretamente no banco de dados; <br>
+                • Implantação e manutenção de sistemas voltados à automação comercial. <br>
               </p>
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
+        
 
           </ol>
 
         </section>
-
+<!--
         <section class="skill">
 
-          <h3 class="h3 skills-title">My skills</h3>
+          <h3 class="h3 skills-title">Minhas Skills</h3>
 
           <ul class="skills-list content-card">
 
@@ -849,7 +981,7 @@
           </ul>
 
         </section>
-
+-->
       </article>
 
 
@@ -1320,7 +1452,7 @@
 
             <textarea name="message" class="form-input" placeholder="Sua Mensagem" required data-form-input></textarea>
 
-            <button class="form-btn" type="submit" disabled data-form-btn>
+            <button class="form-btn" type="submit"  data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
               <span>Enviar</span>
             </button>
