--- a/index.html
+++ b/index.html
@@ -889,11 +889,12 @@
               <span>2023 — 2025</span>
 
               <p class="timeline-text">
-                Suporte Técnico de Campo – Sistemas Corporativos <br>
-              • Suporte e manutenção de sistemas ERP, folha de pagamento, contabilidade e logística; <br>
-              • Gerenciamento de conexões via VPN e sistemas TEF; <br>
-              • Criação de relatórios e consultas SQL diretamente no banco de dados; <br>
-              • Implantação e manutenção de sistemas voltados à automação comercial. <br>
+                Suporte Técnico de Campo – Segurança da Informação <br>
+              • Implantação e administração de soluções de segurança de rede com foco em firewalls Blockbit e Fortinet; <br>
+              • Configuração e manutenção de redes WAN e LAN (roteadores, VLANs, PPPoE, NAT e ACLs);  <br>
+              • Uso de CLI e interfaces web para ajustes técnicos e correção de falhas; <br>
+              • Integração de impressoras em rede e suporte à conectividade de dispositivos em ambientes governamentais; <br>
+              • Atendimento técnico em campo com foco em estabilidade, segurança e alta disponibilidade. <br>
               </p>
 
             </li>
